; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_vsc_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_vsc_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 (i32, i32, i32, i32*)* }
%struct.TYPE_7__ = type { i32, i32, i32* }

@btm_cb = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@.str = private unnamed_addr constant [28 x i8] c"Set long adv data complete\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_vsc_complete(i32* %0, i32 %1, i32 %2, i32 (%struct.TYPE_7__*)** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32 (%struct.TYPE_7__*)**, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_7__, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 (%struct.TYPE_7__*)** %3, i32 (%struct.TYPE_7__*)*** %8, align 8
  store %struct.TYPE_8__* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 0), %struct.TYPE_8__** %9, align 8
  %14 = load i32, i32* %6, align 4
  switch i32 %14, label %44 [
    i32 129, label %15
    i32 128, label %17
  ]

15:                                               ; preds = %4
  %16 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %45

17:                                               ; preds = %4
  %18 = load i32, i32* %11, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @STREAM_TO_UINT8(i32 %18, i32* %19)
  %21 = load i32, i32* %10, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @STREAM_TO_UINT8(i32 %21, i32* %22)
  %24 = load i32, i32* %12, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @STREAM_TO_UINT32(i32 %24, i32* %25)
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %28 = icmp ne %struct.TYPE_8__* %27, null
  br i1 %28, label %29, label %43

29:                                               ; preds = %17
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = load i32 (i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32*)** %31, align 8
  %33 = icmp ne i32 (i32, i32, i32, i32*)* %32, null
  br i1 %33, label %34, label %43

34:                                               ; preds = %29
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32 (i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32*)** %36, align 8
  %38 = load i32, i32* %11, align 4
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* %12, align 4
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 %37(i32 %38, i32 %39, i32 %40, i32* %41)
  br label %43

43:                                               ; preds = %34, %29, %17
  br label %45

44:                                               ; preds = %4
  br label %45

45:                                               ; preds = %44, %43, %15
  %46 = load i32 (%struct.TYPE_7__*)**, i32 (%struct.TYPE_7__*)*** %8, align 8
  %47 = icmp ne i32 (%struct.TYPE_7__*)** %46, null
  br i1 %47, label %48, label %58

48:                                               ; preds = %45
  %49 = load i32, i32* %6, align 4
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  store i32 %49, i32* %50, align 8
  %51 = load i32, i32* %7, align 4
  %52 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 1
  store i32 %51, i32* %52, align 4
  %53 = load i32*, i32** %5, align 8
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 2
  store i32* %53, i32** %54, align 8
  %55 = load i32 (%struct.TYPE_7__*)**, i32 (%struct.TYPE_7__*)*** %8, align 8
  %56 = load i32 (%struct.TYPE_7__*)*, i32 (%struct.TYPE_7__*)** %55, align 8
  %57 = call i32 %56(%struct.TYPE_7__* %13)
  br label %58

58:                                               ; preds = %48, %45
  ret void
}

declare dso_local i32 @BTM_TRACE_EVENT(i8*) #1

declare dso_local i32 @STREAM_TO_UINT8(i32, i32*) #1

declare dso_local i32 @STREAM_TO_UINT32(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
